--- a/mlp_regression_simulation.Rmd
+++ b/mlp_regression_simulation.Rmd
@@ -6,6 +6,8 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
+### Multilayer perceptron example
+
 Here I generate some simple simulated data where y = sin(x) + e.
 
 ```{r}
